--- a/chess.css
+++ b/chess.css
@@ -26,3 +26,8 @@ background-color: green;
 tr{
     padding: 0%;
 }
+img{
+    max-width: 100%;
+    max-height: 100%;
+    display: block; /* remove extra space below image */
+}
