--- a/chess.css
+++ b/chess.css
@@ -12,22 +12,27 @@
   
 
 .blackBox{
-    padding: 0%;
-width: 6px;
-height: 6px;
+    padding: 0px;
+   
 background-color: green;
 }
 .whiteBox{
     padding: 0px;
-    width: 6px;
-    height: 6px;
+   
     background-color: wheat;
 }
+td{
+    width: 75px;
+    height: 75px;
+}
 tr{
-    padding: 0%;
+    width: 600px;
+    height: 75px;
+    padding: 0px;
+    margin: 0px;
 }
-img{
-    max-width: 100%;
-    max-height: 100%;
-    display: block; /* remove extra space below image */
-}
+ img{
+    display:block; width:50px; height:50px;
+   
+} 
+
