--- a/chess.css
+++ b/chess.css
@@ -35,4 +35,26 @@ tr{
     display:block; width:50px; height:50px;
    
 } 
+.blink{
+    
+    background:green;
+    animation:pawn1 0.6s;
+  -moz-animation:pawn1 0.6s infinite; /* Firefox */
+-webkit-animation:pawn1 0.6s infinite; /* Safari and Chrome */
+  }
+
+
+  @-moz-keyframes pawn1 /* Firefox */
+{
+0%   {background:green;}
+50%  {background:wheat;}
+100%   {background: green;}
+}
+ 
+    @-webkit-keyframes pawn1 /* Firefox */
+{
+0%   {background:green;}
+50%  {background:wheat;}
+100%   {background:green;}
+}
 
